# serializer version: 1
# name: TestCreateGroup.test_ok_and_duplicate[mongo]
  dict({
    '_id': 'foo',
    'created_at': datetime.datetime(2015, 10, 6, 20, 0),
    'data_type': 'genome',
    'description': 'This is a test reference.',
    'groups': list([
      dict({
        'build': True,
        'created_at': datetime.datetime(2015, 10, 6, 20, 0),
        'id': 1,
        'legacy_id': None,
        'modify': False,
        'modify_otu': True,
        'remove': False,
      }),
    ]),
    'internal_control': None,
    'name': 'Foo',
    'organism': 'virus',
    'restrict_source_types': False,
    'source_types': list([
    ]),
    'user': dict({
      'id': 1,
    }),
    'users': list([
    ]),
  })
# ---
# name: TestCreateGroup.test_ok_and_duplicate[obj]
  dict({
    'build': True,
    'created_at': datetime.datetime(2015, 10, 6, 20, 0),
    'id': 1,
    'legacy_id': None,
    'modify': False,
    'modify_otu': True,
    'name': 'haematologists',
    'remove': False,
  })
# ---
# name: TestCreateUser.test_ok[reference]
  dict({
    'cloned_from': None,
    'contributors': list([
    ]),
    'created_at': datetime.datetime(2015, 10, 6, 20, 0),
    'data_type': <ReferenceDataType.genome: 'genome'>,
    'description': '',
    'groups': list([
    ]),
    'id': 'bf1b993c',
    'imported_from': None,
    'installed': None,
    'internal_control': None,
    'latest_build': None,
    'name': 'Example',
    'organism': '',
    'otu_count': 0,
    'release': None,
    'remotes_from': None,
    'restrict_source_types': False,
    'source_types': list([
      'isolate',
      'strain',
    ]),
    'targets': None,
    'task': None,
    'unbuilt_change_count': 0,
    'updating': None,
    'user': dict({
      'handle': 'leeashley',
      'id': 1,
    }),
    'users': list([
      dict({
        'build': True,
        'created_at': datetime.datetime(2015, 10, 6, 20, 0),
        'handle': 'leeashley',
        'id': 1,
        'modify': True,
        'modify_otu': True,
        'remove': True,
      }),
      dict({
        'build': True,
        'created_at': datetime.datetime(2015, 10, 6, 20, 0),
        'handle': 'zclark',
        'id': 2,
        'modify': False,
        'modify_otu': True,
        'remove': False,
      }),
    ]),
  })
# ---
# name: TestCreateUser.test_ok[user_obj]
  dict({
    'build': True,
    'created_at': datetime.datetime(2015, 10, 6, 20, 0),
    'handle': 'zclark',
    'id': 2,
    'modify': False,
    'modify_otu': True,
    'remove': False,
  })
# ---
# name: TestDeleteGroup.test_ok
  dict({
    '_id': 'foo',
    'created_at': datetime.datetime(2015, 10, 6, 20, 0),
    'data_type': 'genome',
    'description': 'This is a test reference.',
    'groups': list([
    ]),
    'internal_control': None,
    'name': 'Foo',
    'organism': 'virus',
    'restrict_source_types': False,
    'source_types': list([
    ]),
    'user': dict({
      'id': 1,
    }),
    'users': list([
    ]),
  })
# ---
# name: TestDeleteUser.test_ok
  dict({
    '_id': 'foo',
    'created_at': datetime.datetime(2015, 10, 6, 20, 0),
    'data_type': 'genome',
    'description': 'This is a test reference.',
    'groups': list([
    ]),
    'internal_control': None,
    'name': 'Foo',
    'organism': 'virus',
    'restrict_source_types': False,
    'source_types': list([
    ]),
    'user': dict({
      'id': 1,
    }),
    'users': list([
    ]),
  })
# ---
# name: TestPopulateRemoteReference.test_ok
  dict({
    '_id': 'ref_id',
    'created_at': datetime.datetime(2015, 10, 6, 20, 0),
    'data_type': 'genome',
    'description': 'Remote reference description',
    'groups': list([
    ]),
    'installed': dict({
      'body': 'This is a release.',
      'created_at': datetime.datetime(2015, 10, 6, 20, 0),
      'filename': 'reference.json.gz',
      'html_url': 'https://github.com/virtool/ref-plant-viruses/releases/tag/v1.0.0',
      'id': 1,
      'name': 'v1.0.0',
      'newer': True,
      'published_at': datetime.datetime(2015, 10, 6, 20, 0),
      'ready': True,
      'size': 1024,
      'user': dict({
        'id': 1,
      }),
    }),
    'name': 'Remote Reference',
    'organism': 'Updated Organism',
    'release': dict({
      'body': 'This is a release.',
      'content_type': 'application/gzip',
      'download_url': 'https://github.com/virtool/ref-plant-viruses/releases/download/v1.0.0/reference.json.gz',
      'etag': 'etag',
      'filename': 'reference.json.gz',
      'html_url': 'https://github.com/virtool/ref-plant-viruses/releases/tag/v1.0.0',
      'id': 1,
      'name': 'v1.0.0',
      'newer': True,
      'published_at': datetime.datetime(2015, 10, 6, 20, 0),
      'retrieved_at': datetime.datetime(2015, 10, 6, 20, 0),
      'size': 1024,
    }),
    'remotes_from': dict({
      'errors': list([
      ]),
      'slug': 'virtool/ref-plant-viruses',
    }),
    'restrict_source_types': False,
    'source_types': list([
      'strain',
      'isolate',
    ]),
    'targets': None,
    'updates': list([
      dict({
        'body': 'This is a release.',
        'created_at': datetime.datetime(2015, 10, 6, 20, 0),
        'filename': 'reference.json.gz',
        'html_url': 'https://github.com/virtool/ref-plant-viruses/releases/tag/v1.0.0',
        'id': 1,
        'name': 'v1.0.0',
        'newer': True,
        'published_at': datetime.datetime(2015, 10, 6, 20, 0),
        'ready': True,
        'size': 1024,
        'user': dict({
          'id': 1,
        }),
      }),
    ]),
    'updating': False,
    'user': dict({
      'id': 1,
    }),
    'users': list([
      dict({
        'build': True,
        'created_at': datetime.datetime(2015, 10, 6, 20, 0),
        'id': 1,
        'modify': True,
        'modify_otu': True,
        'remove': True,
      }),
    ]),
  })
# ---
# name: TestPopulateRemoteReference.test_ok.1
  list([
    dict({
      '_id': 'otu_id_1',
      'abbreviation': '',
      'created_at': datetime.datetime(2015, 10, 6, 20, 0),
      'imported': True,
      'isolates': list([
        dict({
          'default': True,
          'id': 'iso_id_1',
          'source_name': 'S3',
          'source_type': 'strain',
        }),
      ]),
      'issues': None,
      'last_indexed_version': None,
      'lower_name': 'cherry virus b',
      'name': 'Cherry virus B',
      'reference': dict({
        'id': 'ref_id',
      }),
      'remote': dict({
        'id': 'otu_1',
      }),
      'schema': list([
      ]),
      'user': dict({
        'id': 1,
      }),
      'verified': True,
      'version': 0,
    }),
  ])
# ---
# name: TestPopulateRemoteReference.test_ok.2
  list([
    dict({
      '_id': 'otu_id_1.0',
      'created_at': datetime.datetime(2015, 10, 6, 20, 0),
      'description': 'Remoted Cherry virus B',
      'diff': list([
        list([
          'change',
          '',
          list([
            None,
            dict({
              '_id': 'otu_id_1',
              'abbreviation': '',
              'created_at': datetime.datetime(2015, 10, 6, 20, 0),
              'imported': True,
              'isolates': list([
                dict({
                  'default': True,
                  'id': 'iso_id_1',
                  'source_name': 'S3',
                  'source_type': 'strain',
                }),
              ]),
              'issues': None,
              'last_indexed_version': None,
              'lower_name': 'cherry virus b',
              'name': 'Cherry virus B',
              'reference': dict({
                'id': 'ref_id',
              }),
              'remote': dict({
                'id': 'otu_1',
              }),
              'schema': list([
              ]),
              'user': dict({
                'id': 1,
              }),
              'verified': True,
              'version': 0,
            }),
          ]),
        ]),
      ]),
      'index': dict({
        'id': 'unbuilt',
        'version': 'unbuilt',
      }),
      'method_name': 'remote',
      'otu': dict({
        'id': 'otu_id_1',
        'name': 'Cherry virus B',
        'version': 0,
      }),
      'reference': dict({
        'id': 'ref_id',
      }),
      'user': dict({
        'id': 1,
      }),
    }),
  ])
# ---
# name: TestUpdate.test_control[-False]
  dict({
    'cloned_from': None,
    'contributors': list([
    ]),
    'created_at': datetime.datetime(2015, 10, 6, 20, 0),
    'data_type': <ReferenceDataType.genome: 'genome'>,
    'description': 'This is a test reference.',
    'groups': list([
    ]),
    'id': 'foo',
    'imported_from': None,
    'installed': None,
    'internal_control': None,
    'latest_build': None,
    'name': 'Tester',
    'organism': 'virus',
    'otu_count': 0,
    'release': None,
    'remotes_from': None,
    'restrict_source_types': False,
    'source_types': list([
    ]),
    'targets': None,
    'task': None,
    'unbuilt_change_count': 0,
    'updating': None,
    'user': dict({
      'handle': 'leeashley',
      'id': 1,
    }),
    'users': list([
      dict({
        'build': True,
        'created_at': datetime.datetime(2015, 10, 6, 20, 0),
        'handle': 'zclark',
        'id': 2,
        'modify': True,
        'modify_otu': True,
        'remove': True,
      }),
    ]),
  })
# ---
# name: TestUpdate.test_control[-False].1
  dict({
    '_id': 'foo',
    'created_at': datetime.datetime(2015, 10, 6, 20, 0),
    'data_type': 'genome',
    'description': 'This is a test reference.',
    'groups': list([
    ]),
    'internal_control': '',
    'name': 'Tester',
    'organism': 'virus',
    'restrict_source_types': False,
    'source_types': list([
    ]),
    'user': dict({
      'id': 1,
    }),
    'users': list([
      dict({
        'build': True,
        'id': 2,
        'modify': True,
        'modify_otu': True,
        'remove': True,
      }),
    ]),
  })
# ---
# name: TestUpdate.test_control[-True]
  dict({
    'cloned_from': None,
    'contributors': list([
    ]),
    'created_at': datetime.datetime(2015, 10, 6, 20, 0),
    'data_type': <ReferenceDataType.genome: 'genome'>,
    'description': 'This is a test reference.',
    'groups': list([
    ]),
    'id': 'foo',
    'imported_from': None,
    'installed': None,
    'internal_control': None,
    'latest_build': None,
    'name': 'Tester',
    'organism': 'virus',
    'otu_count': 0,
    'release': None,
    'remotes_from': None,
    'restrict_source_types': False,
    'source_types': list([
    ]),
    'targets': None,
    'task': None,
    'unbuilt_change_count': 0,
    'updating': None,
    'user': dict({
      'handle': 'leeashley',
      'id': 1,
    }),
    'users': list([
      dict({
        'build': True,
        'created_at': datetime.datetime(2015, 10, 6, 20, 0),
        'handle': 'zclark',
        'id': 2,
        'modify': True,
        'modify_otu': True,
        'remove': True,
      }),
    ]),
  })
# ---
# name: TestUpdate.test_control[-True].1
  dict({
    '_id': 'foo',
    'created_at': datetime.datetime(2015, 10, 6, 20, 0),
    'data_type': 'genome',
    'description': 'This is a test reference.',
    'groups': list([
    ]),
    'internal_control': '',
    'name': 'Tester',
    'organism': 'virus',
    'restrict_source_types': False,
    'source_types': list([
    ]),
    'user': dict({
      'id': 1,
    }),
    'users': list([
      dict({
        'build': True,
        'id': 2,
        'modify': True,
        'modify_otu': True,
        'remove': True,
      }),
    ]),
  })
# ---
# name: TestUpdate.test_control[None-False]
  dict({
    'cloned_from': None,
    'contributors': list([
    ]),
    'created_at': datetime.datetime(2015, 10, 6, 20, 0),
    'data_type': <ReferenceDataType.genome: 'genome'>,
    'description': 'This is a test reference.',
    'groups': list([
    ]),
    'id': 'foo',
    'imported_from': None,
    'installed': None,
    'internal_control': None,
    'latest_build': None,
    'name': 'Tester',
    'organism': 'virus',
    'otu_count': 0,
    'release': None,
    'remotes_from': None,
    'restrict_source_types': False,
    'source_types': list([
    ]),
    'targets': None,
    'task': None,
    'unbuilt_change_count': 0,
    'updating': None,
    'user': dict({
      'handle': 'leeashley',
      'id': 1,
    }),
    'users': list([
      dict({
        'build': True,
        'created_at': datetime.datetime(2015, 10, 6, 20, 0),
        'handle': 'zclark',
        'id': 2,
        'modify': True,
        'modify_otu': True,
        'remove': True,
      }),
    ]),
  })
# ---
# name: TestUpdate.test_control[None-False].1
  dict({
    '_id': 'foo',
    'created_at': datetime.datetime(2015, 10, 6, 20, 0),
    'data_type': 'genome',
    'description': 'This is a test reference.',
    'groups': list([
    ]),
    'internal_control': None,
    'name': 'Tester',
    'organism': 'virus',
    'restrict_source_types': False,
    'source_types': list([
    ]),
    'user': dict({
      'id': 1,
    }),
    'users': list([
      dict({
        'build': True,
        'id': 2,
        'modify': True,
        'modify_otu': True,
        'remove': True,
      }),
    ]),
  })
# ---
# name: TestUpdate.test_control[None-True]
  dict({
    'cloned_from': None,
    'contributors': list([
    ]),
    'created_at': datetime.datetime(2015, 10, 6, 20, 0),
    'data_type': <ReferenceDataType.genome: 'genome'>,
    'description': 'This is a test reference.',
    'groups': list([
    ]),
    'id': 'foo',
    'imported_from': None,
    'installed': None,
    'internal_control': None,
    'latest_build': None,
    'name': 'Tester',
    'organism': 'virus',
    'otu_count': 0,
    'release': None,
    'remotes_from': None,
    'restrict_source_types': False,
    'source_types': list([
    ]),
    'targets': None,
    'task': None,
    'unbuilt_change_count': 0,
    'updating': None,
    'user': dict({
      'handle': 'leeashley',
      'id': 1,
    }),
    'users': list([
      dict({
        'build': True,
        'created_at': datetime.datetime(2015, 10, 6, 20, 0),
        'handle': 'zclark',
        'id': 2,
        'modify': True,
        'modify_otu': True,
        'remove': True,
      }),
    ]),
  })
# ---
# name: TestUpdate.test_control[None-True].1
  dict({
    '_id': 'foo',
    'created_at': datetime.datetime(2015, 10, 6, 20, 0),
    'data_type': 'genome',
    'description': 'This is a test reference.',
    'groups': list([
    ]),
    'internal_control': None,
    'name': 'Tester',
    'organism': 'virus',
    'restrict_source_types': False,
    'source_types': list([
    ]),
    'user': dict({
      'id': 1,
    }),
    'users': list([
      dict({
        'build': True,
        'id': 2,
        'modify': True,
        'modify_otu': True,
        'remove': True,
      }),
    ]),
  })
# ---
# name: TestUpdate.test_control[baz-False]
  dict({
    'cloned_from': None,
    'contributors': list([
    ]),
    'created_at': datetime.datetime(2015, 10, 6, 20, 0),
    'data_type': <ReferenceDataType.genome: 'genome'>,
    'description': 'This is a test reference.',
    'groups': list([
    ]),
    'id': 'foo',
    'imported_from': None,
    'installed': None,
    'internal_control': None,
    'latest_build': None,
    'name': 'Tester',
    'organism': 'virus',
    'otu_count': 0,
    'release': None,
    'remotes_from': None,
    'restrict_source_types': False,
    'source_types': list([
    ]),
    'targets': None,
    'task': None,
    'unbuilt_change_count': 0,
    'updating': None,
    'user': dict({
      'handle': 'leeashley',
      'id': 1,
    }),
    'users': list([
      dict({
        'build': True,
        'created_at': datetime.datetime(2015, 10, 6, 20, 0),
        'handle': 'zclark',
        'id': 2,
        'modify': True,
        'modify_otu': True,
        'remove': True,
      }),
    ]),
  })
# ---
# name: TestUpdate.test_control[baz-False].1
  dict({
    '_id': 'foo',
    'created_at': datetime.datetime(2015, 10, 6, 20, 0),
    'data_type': 'genome',
    'description': 'This is a test reference.',
    'groups': list([
    ]),
    'internal_control': 'baz',
    'name': 'Tester',
    'organism': 'virus',
    'restrict_source_types': False,
    'source_types': list([
    ]),
    'user': dict({
      'id': 1,
    }),
    'users': list([
      dict({
        'build': True,
        'id': 2,
        'modify': True,
        'modify_otu': True,
        'remove': True,
      }),
    ]),
  })
# ---
# name: TestUpdate.test_control[baz-True]
  dict({
    'cloned_from': None,
    'contributors': list([
    ]),
    'created_at': datetime.datetime(2015, 10, 6, 20, 0),
    'data_type': <ReferenceDataType.genome: 'genome'>,
    'description': 'This is a test reference.',
    'groups': list([
    ]),
    'id': 'foo',
    'imported_from': None,
    'installed': None,
    'internal_control': None,
    'latest_build': None,
    'name': 'Tester',
    'organism': 'virus',
    'otu_count': 0,
    'release': None,
    'remotes_from': None,
    'restrict_source_types': False,
    'source_types': list([
    ]),
    'targets': None,
    'task': None,
    'unbuilt_change_count': 0,
    'updating': None,
    'user': dict({
      'handle': 'leeashley',
      'id': 1,
    }),
    'users': list([
      dict({
        'build': True,
        'created_at': datetime.datetime(2015, 10, 6, 20, 0),
        'handle': 'zclark',
        'id': 2,
        'modify': True,
        'modify_otu': True,
        'remove': True,
      }),
    ]),
  })
# ---
# name: TestUpdate.test_control[baz-True].1
  dict({
    '_id': 'foo',
    'created_at': datetime.datetime(2015, 10, 6, 20, 0),
    'data_type': 'genome',
    'description': 'This is a test reference.',
    'groups': list([
    ]),
    'internal_control': 'baz',
    'name': 'Tester',
    'organism': 'virus',
    'restrict_source_types': False,
    'source_types': list([
    ]),
    'user': dict({
      'id': 1,
    }),
    'users': list([
      dict({
        'build': True,
        'id': 2,
        'modify': True,
        'modify_otu': True,
        'remove': True,
      }),
    ]),
  })
# ---
# name: TestUpdateGroup.test_ok[mongo]
  dict({
    '_id': 'foo',
    'created_at': datetime.datetime(2015, 10, 6, 20, 0),
    'data_type': 'genome',
    'description': 'This is a test reference.',
    'groups': list([
      dict({
        'build': False,
        'created_at': datetime.datetime(2015, 10, 6, 20, 0),
        'id': 1,
        'modify': True,
        'modify_otu': True,
        'remove': False,
      }),
    ]),
    'internal_control': None,
    'name': 'Foo',
    'organism': 'virus',
    'restrict_source_types': False,
    'source_types': list([
    ]),
    'user': dict({
      'id': 1,
    }),
    'users': list([
    ]),
  })
# ---
# name: TestUpdateGroup.test_ok[obj]
  dict({
    'build': False,
    'created_at': datetime.datetime(2015, 10, 6, 20, 0),
    'id': 1,
    'legacy_id': None,
    'modify': True,
    'modify_otu': True,
    'name': 'haematologists',
    'remove': False,
  })
# ---
# name: TestUpdateRemoteReference.test_ok
  dict({
    '_id': 'bf1b993c',
    'created_at': datetime.datetime(2015, 10, 6, 20, 0),
    'data_type': 'genome',
    'description': 'Remote reference description',
    'groups': list([
    ]),
    'installed': dict({
      'body': 'This is a release.',
      'created_at': datetime.datetime(2015, 10, 6, 20, 0),
      'filename': 'reference.json.gz',
      'html_url': 'https://github.com/virtool/ref-plant-viruses/releases/tag/v1.0.0',
      'id': 1,
      'name': 'v1.0.0',
      'newer': False,
      'published_at': '2022-01-01T00:00:00Z',
      'ready': True,
      'size': 1024,
      'user': dict({
        'id': 1,
      }),
    }),
    'internal_control': None,
    'name': 'Remote Reference',
    'organism': 'Updated Organism',
    'release': dict({
      'body': 'This is a release.',
      'content_type': 'application/gzip',
      'download_url': 'https://github.com/virtool/ref-plant-viruses/releases/download/v1.0.0/reference.json.gz',
      'etag': 'etag',
      'filename': 'reference.json.gz',
      'html_url': 'https://github.com/virtool/ref-plant-viruses/releases/tag/v1.0.0',
      'id': 1,
      'name': 'v1.0.0',
      'newer': False,
      'published_at': datetime.datetime(2015, 10, 6, 20, 0),
      'retrieved_at': datetime.datetime(2015, 10, 6, 20, 0),
      'size': 1024,
    }),
    'remotes_from': dict({
      'errors': list([
      ]),
      'slug': 'virtool/ref-plant-viruses',
    }),
    'restrict_source_types': False,
    'source_types': list([
      'isolate',
      'strain',
    ]),
    'space': dict({
      'id': 0,
    }),
    'targets': None,
    'updates': list([
      dict({
        'body': 'This is a release.',
        'created_at': datetime.datetime(2015, 10, 6, 20, 0),
        'filename': 'reference.json.gz',
        'html_url': 'https://github.com/virtool/ref-plant-viruses/releases/tag/v1.0.0',
        'id': 1,
        'name': 'v1.0.0',
        'newer': True,
        'published_at': datetime.datetime(2015, 10, 6, 20, 0),
        'ready': True,
        'size': 1024,
        'user': dict({
          'id': 1,
        }),
      }),
    ]),
    'updating': False,
    'user': dict({
      'id': 1,
    }),
    'users': list([
      dict({
        'build': True,
        'created_at': datetime.datetime(2015, 10, 6, 20, 0),
        'id': 1,
        'modify': True,
        'modify_otu': True,
        'remove': True,
      }),
    ]),
  })
# ---
# name: TestUpdateRemoteReference.test_with_deletion
  dict({
    '_id': 'bf1b993c',
    'created_at': datetime.datetime(2015, 10, 6, 20, 0),
    'data_type': 'genome',
    'description': 'Remote reference description',
    'groups': list([
    ]),
    'installed': dict({
      'body': 'This is a release.',
      'created_at': datetime.datetime(2015, 10, 6, 20, 0),
      'filename': 'reference.json.gz',
      'html_url': 'https://github.com/virtool/ref-plant-viruses/releases/tag/v1.0.0',
      'id': 1,
      'name': 'v1.0.0',
      'newer': False,
      'published_at': '2022-01-01T00:00:00Z',
      'ready': True,
      'size': 1024,
      'user': dict({
        'id': 1,
      }),
    }),
    'internal_control': None,
    'name': 'Remote Reference',
    'organism': 'Updated Organism',
    'release': dict({
      'body': 'This is a release.',
      'content_type': 'application/gzip',
      'download_url': 'https://github.com/virtool/ref-plant-viruses/releases/download/v1.0.0/reference.json.gz',
      'etag': 'etag',
      'filename': 'reference.json.gz',
      'html_url': 'https://github.com/virtool/ref-plant-viruses/releases/tag/v1.0.0',
      'id': 1,
      'name': 'v1.0.0',
      'newer': False,
      'published_at': datetime.datetime(2015, 10, 6, 20, 0),
      'retrieved_at': datetime.datetime(2015, 10, 6, 20, 0),
      'size': 1024,
    }),
    'remotes_from': dict({
      'errors': list([
      ]),
      'slug': 'virtool/ref-plant-viruses',
    }),
    'restrict_source_types': False,
    'source_types': list([
      'isolate',
      'strain',
    ]),
    'space': dict({
      'id': 0,
    }),
    'targets': None,
    'updates': list([
      dict({
        'body': 'This is a release.',
        'created_at': datetime.datetime(2015, 10, 6, 20, 0),
        'filename': 'reference.json.gz',
        'html_url': 'https://github.com/virtool/ref-plant-viruses/releases/tag/v1.0.0',
        'id': 1,
        'name': 'v1.0.0',
        'newer': True,
        'published_at': datetime.datetime(2015, 10, 6, 20, 0),
        'ready': True,
        'size': 1024,
        'user': dict({
          'id': 1,
        }),
      }),
    ]),
    'updating': False,
    'user': dict({
      'id': 1,
    }),
    'users': list([
      dict({
        'build': True,
        'created_at': datetime.datetime(2015, 10, 6, 20, 0),
        'id': 1,
        'modify': True,
        'modify_otu': True,
        'remove': True,
      }),
    ]),
  })
# ---
# name: TestUpdateUser.test_ok[mongo]
  dict({
    '_id': 'foo',
    'created_at': datetime.datetime(2015, 10, 6, 20, 0),
    'data_type': 'genome',
    'description': 'This is a test reference.',
    'groups': list([
    ]),
    'internal_control': None,
    'name': 'Foo',
    'organism': 'virus',
    'restrict_source_types': False,
    'source_types': list([
    ]),
    'user': dict({
      'id': 1,
    }),
    'users': list([
      dict({
        'build': True,
        'created_at': datetime.datetime(2015, 10, 6, 20, 0),
        'id': 2,
        'modify': True,
        'modify_otu': True,
        'remove': False,
      }),
    ]),
  })
# ---
# name: TestUpdateUser.test_ok[obj_1]
  dict({
    'build': True,
    'created_at': datetime.datetime(2015, 10, 6, 20, 0),
    'handle': 'zclark',
    'id': 2,
    'modify': False,
    'modify_otu': False,
    'remove': False,
  })
# ---
# name: TestUpdateUser.test_ok[obj_2]
  dict({
    'build': True,
    'created_at': datetime.datetime(2015, 10, 6, 20, 0),
    'handle': 'zclark',
    'id': 2,
    'modify': True,
    'modify_otu': True,
    'remove': False,
  })
# ---
